--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@
 .hero {
     height: 100vh;
     width: 100%;
-    background-image: url(./mount.jpg);
+    background-image: url(img/mount.jpg);
     background-size: cover;
     background-position: center;
 }
